syntax = "proto3";
package com.krickert.search.model;
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

message PipelineReloadRequest {
  string pipeline_name = 1;
}
message PipelineReloadResponse {
  bool success = 1;
  string message = 2;
}
message ServiceReloadRequest {
  string service_name = 1;
}
message ServiceReloadResponse {
  bool success = 1;
  string message = 2;
}
message ApplicationChangeEvent {
  string application = 1;
}
message ApplicationChangeResponse {
  bool success = 1;
  string message = 2;
}

service ReloadService {
  rpc reloadPipeline(PipelineReloadRequest) returns (PipelineReloadResponse);
  rpc reloadService(ServiceReloadRequest) returns (ServiceReloadResponse);
  rpc applicationChanged(ApplicationChangeEvent) returns (ApplicationChangeResponse);
}
